--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,7 +108,7 @@ if (MSVC)
 endif ()
 
 # set the startup project for the "play" button in MSVC
-set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT intro)
+set_property(DIRECTORY PROPERTY VS_STARTUP_PROJECT mvpge)
 
 if (CMAKE_SKIP_INSTALL_RULES)
   return()
@@ -120,7 +120,7 @@ include(cmake/PackageProject.cmake)
 # we know we want to ship
 MPVGE_package_project(
   TARGETS
-  intro
+  mvpge
   MPVGE_options
   MPVGE_warnings
   # FIXME: this does not work! CK
