feat: add mpvge_lib_core library and update CMake configurations
- Created new header and source files for mpvge_lib_core.
- Updated CMakeLists.txt to include mpvge_lib_core as a subdirectory.
- Added linking for mpvge_lib_core in the mpvge library.
- Refactored mpvge_lib to use modern CMake practices and improved shader handling.
- Removed old factorial implementation from mpvge_lib.

--- a/src/mpvge/CMakeLists.txt
+++ b/src/mpvge/CMakeLists.txt
@@ -10,6 +10,7 @@ target_link_system_libraries(
   PRIVATE
           CLI11::CLI11
           fmt::fmt
-          spdlog::spdlog)
+          spdlog::spdlog
+          MPVGE::mpvge_lib)
 
 target_include_directories(mvpge PRIVATE "${CMAKE_BINARY_DIR}/configured_files/include")
