--- a/configured_files/config.hpp.in
+++ b/configured_files/config.hpp.in
@@ -1,5 +1,6 @@
-#ifndef MPVGE_CONFIG_HPP
-#define MPVGE_CONFIG_HPP
+#pragma once
+
+#include <string_view>
 
 // this is a basic example of how a CMake configured file might look
 // in this particular case, we are using it to set the version number of our executable
@@ -11,6 +12,5 @@ inline constexpr int project_version_minor { @PROJECT_VERSION_MINOR@ };
 inline constexpr int project_version_patch { @PROJECT_VERSION_PATCH@ };
 inline constexpr int project_version_tweak { @PROJECT_VERSION_TWEAK@ };
 inline constexpr std::string_view git_sha = "@GIT_SHA@";
+inline constexpr std::string_view git_short_sha = "@GIT_SHORT_SHA@";
 }// namespace MPVGE::cmake
-
-#endif
