feat: add Application class and integrate into main application flow
- Created Application.hpp and Application.cpp to define the Application class with constructor and destructor.
- Updated mpvge_lib.hpp to include Application.hpp.
- Modified main.cpp to instantiate Application class.
- Updated CMakeLists.txt to include Application.cpp in the mpvge_lib library.
- Fixed include path in mpvge_lib_core.cpp for consistency.

--- a/src/mpvge_lib/CMakeLists.txt
+++ b/src/mpvge_lib/CMakeLists.txt
@@ -1,7 +1,9 @@
 include(GenerateExportHeader)
 
 find_package(Vulkan REQUIRED)
-add_library(mpvge_lib mpvge_lib.cpp)
+add_library(mpvge_lib mpvge_lib.cpp
+        Application.cpp
+        ../../include/MPVGE/Application.hpp)
 
 get_target_property(target_name mpvge_lib NAME)
 include("${CMAKE_SOURCE_DIR}/cmake/Simd.cmake")
