feat: integrate GLFW for window management and add application run loop
- Added GLFW dependency in Dependencies.cmake if not already present.
- Updated Application class in Application.hpp to include a run method and manage a GLFW window.
- Implemented GLFW initialization and window creation in Application constructor.
- Added cleanup for GLFW window and termination in Application destructor.
- Implemented the run method to handle window events and Vulkan extension enumeration.
- Updated CMakeLists.txt to link against GLFW library.

--- a/src/mpvge_lib/CMakeLists.txt
+++ b/src/mpvge_lib/CMakeLists.txt
@@ -17,6 +17,7 @@ target_link_libraries(mpvge_lib
         MPVGE_warnings
         PUBLIC
         Vulkan::Vulkan
+        glfw
         MPVGE::mpvge_lib_core
 )
 
