--- a/src/mpvge_lib/CMakeLists.txt
+++ b/src/mpvge_lib/CMakeLists.txt
@@ -3,7 +3,9 @@ include(GenerateExportHeader)
 find_package(Vulkan REQUIRED)
 add_library(mpvge_lib mpvge_lib.cpp
         Application.cpp
-        ../../include/MPVGE/Application.hpp)
+        ../../include/MPVGE/Application.hpp
+        Window.cpp
+        Monitor.cpp)
 
 get_target_property(target_name mpvge_lib NAME)
 include("${CMAKE_SOURCE_DIR}/cmake/Simd.cmake")
