feat: add Vulkan support with Instance and Surface classes, and implement simple shaders
- Added `Surface` class for managing Vulkan surface creation and destruction.
- Introduced `Instance` class to handle Vulkan instance creation and validation layer checks.
- Created simple vertex and fragment shaders for rendering.
- Updated `Window` class to integrate Vulkan surface creation.
- Modified `Application` class to include instance and surface management.
- Added new shader files: `simple_shader.vert` and `simple_shader.frag`.
- Updated `.gitignore` to exclude shader output files.

--- a/src/mpvge_lib/CMakeLists.txt
+++ b/src/mpvge_lib/CMakeLists.txt
@@ -5,7 +5,14 @@ add_library(mpvge_lib mpvge_lib.cpp
         Application.cpp
         ../../include/MPVGE/Application.hpp
         Window.cpp
-        Monitor.cpp)
+        ../../include/MPVGE/Window.hpp
+        Monitor.cpp
+        ../../include/MPVGE/Monitor.hpp
+        Instance.cpp
+        ../../include/MPVGE/Instance.hpp
+        Surface.cpp
+        ../../include/MPVGE/Surface.hpp
+)
 
 get_target_property(target_name mpvge_lib NAME)
 include("${CMAKE_SOURCE_DIR}/cmake/Simd.cmake")
