feat: add Device class for Vulkan device management
- Introduced Device class in Device.hpp and Device.cpp to encapsulate Vulkan device management functionalities, including physical device selection.
- Updated Application.hpp to instantiate a Device object, linking it with Instance and Surface for improved architecture.
- Modified CMakeLists.txt to include new Device source files in the build process.

--- a/src/mpvge_lib/CMakeLists.txt
+++ b/src/mpvge_lib/CMakeLists.txt
@@ -12,6 +12,8 @@ add_library(mpvge_lib mpvge_lib.cpp
         ../../include/MPVGE/Instance.hpp
         Surface.cpp
         ../../include/MPVGE/Surface.hpp
+        ../../include/MPVGE/Device.cpp
+        ../../include/MPVGE/Device.hpp
 )
 
 get_target_property(target_name mpvge_lib NAME)
