fix: Device.hpp include in Application.hpp
- Updated Application.hpp to include the Device header for proper class usage.
- Modified CMakeLists.txt to ensure Device.cpp is compiled as part of the library.

--- a/src/mpvge_lib/CMakeLists.txt
+++ b/src/mpvge_lib/CMakeLists.txt
@@ -12,7 +12,7 @@ add_library(mpvge_lib mpvge_lib.cpp
         ../../include/MPVGE/Instance.hpp
         Surface.cpp
         ../../include/MPVGE/Surface.hpp
-        ../../include/MPVGE/Device.cpp
+        Device.cpp
         ../../include/MPVGE/Device.hpp
 )
 
