feat: enhance Vulkan device management and add queue family support
- Added `DeviceInfo.hpp` to include device information handling.
- Updated `Device.hpp` to include `VkPhysicalDeviceProperties` and methods for checking device suitability and extension support.
- Introduced `QueueFamilyIndices` class in `QueueFamilyIndices.hpp` to manage graphics and present queue families.
- Implemented `Surface` methods for retrieving queue family indices and querying swap chain support in `Surface.cpp`.
- Created `SwapChainSupportDetails.hpp` to encapsulate swap chain capabilities, formats, and present modes.
- Added corresponding implementation files for `QueueFamilyIndices` and `SwapChainSupportDetails`.
- Updated `CMakeLists.txt` to include new source files for compilation.

--- a/src/mpvge_lib/CMakeLists.txt
+++ b/src/mpvge_lib/CMakeLists.txt
@@ -14,6 +14,10 @@ add_library(mpvge_lib mpvge_lib.cpp
         ../../include/MPVGE/Surface.hpp
         Device.cpp
         ../../include/MPVGE/Device.hpp
+        QueueFamilyIndices.cpp
+        ../../include/MPVGE/QueueFamilyIndices.hpp
+        SwapChainSupportDetails.cpp
+        ../../include/MPVGE/SwapChainSupportDetails.hpp
 )
 
 get_target_property(target_name mpvge_lib NAME)
