feat: add RenderPipeline class for shader management and integrate into Application
- Introduced RenderPipeline class in `RenderPipeline.hpp` and `RenderPipeline.cpp` to handle graphics pipeline creation and shader file management.
- Updated `Application.hpp` to include RenderPipeline and instantiate it with vertex and fragment shader file paths.
- Modified `Application.cpp` constructor to remove logging and streamline initialization.
- Updated `CMakeLists.txt` to include new RenderPipeline source and header files for compilation.

--- a/src/mpvge_lib/CMakeLists.txt
+++ b/src/mpvge_lib/CMakeLists.txt
@@ -18,6 +18,8 @@ add_library(mpvge_lib mpvge_lib.cpp
         ../../include/MPVGE/QueueFamilyIndices.hpp
         SwapChainSupportDetails.cpp
         ../../include/MPVGE/SwapChainSupportDetails.hpp
+        RenderPipeline.cpp
+        ../../include/MPVGE/RenderPipeline.hpp
 )
 
 get_target_property(target_name mpvge_lib NAME)
