feat: integrate SwapChain class and enhance RenderPipeline functionality
- Added SwapChain class in include/MPVGE/SwapChain.hpp for managing swap chain resources, including framebuffers, render pass, and image views.
- Updated CMakeLists.txt to include SwapChain.hpp and SwapChain.cpp in the build.
- Enhanced RenderPipeline class in include/MPVGE/RenderPipeline.hpp by adding a bind method to bind the graphics pipeline to a command buffer.
- Modified RenderPipeline.cpp to utilize a new viewport state structure for better pipeline configuration.
- Updated Application class in include/MPVGE/Application.hpp to manage the SwapChain and RenderPipeline instances, improving resource management and rendering flow.

--- a/src/mpvge_lib/CMakeLists.txt
+++ b/src/mpvge_lib/CMakeLists.txt
@@ -20,6 +20,8 @@ add_library(mpvge_lib mpvge_lib.cpp
         ../../include/MPVGE/SwapChainSupportDetails.hpp
         RenderPipeline.cpp
         ../../include/MPVGE/RenderPipeline.hpp
+        ../../include/MPVGE/SwapChain.cpp
+        ../../include/MPVGE/SwapChain.hpp
 )
 
 get_target_property(target_name mpvge_lib NAME)
