--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -35,47 +35,36 @@ add_test(NAME cli.has_help COMMAND mvpge --help)
 add_test(NAME cli.version_matches COMMAND mvpge --version)
 set_tests_properties(cli.version_matches PROPERTIES PASS_REGULAR_EXPRESSION "${PROJECT_VERSION}")
 
-add_executable(tests tests.cpp)
-target_link_libraries(
-  tests
-  PRIVATE MPVGE::MPVGE_warnings
-          MPVGE::MPVGE_options
-          MPVGE::mpvge_lib
-          Catch2::Catch2WithMain)
+#add_executable(tests tests.cpp)
+#target_link_libraries(
+#  tests
+#  PRIVATE MPVGE::MPVGE_warnings
+#          MPVGE::MPVGE_options
+#          MPVGE::mpvge_lib
+#          Catch2::Catch2WithMain)
 
-if(WIN32 AND BUILD_SHARED_LIBS)
-  add_custom_command(
-    TARGET tests
-    PRE_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:tests> $<TARGET_FILE_DIR:tests>
-    COMMAND_EXPAND_LISTS)
-endif()
+#if(WIN32 AND BUILD_SHARED_LIBS)
+#  add_custom_command(
+#    TARGET tests
+#    PRE_BUILD
+#    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:tests> $<TARGET_FILE_DIR:tests>
+#    COMMAND_EXPAND_LISTS)
+#endif()
 
 # automatically discover tests that are defined in catch based test files you can modify the unittests. Set TEST_PREFIX
 # to whatever you want, or use different for different binaries
-catch_discover_tests(
-  tests
-  TEST_PREFIX
-  "unittests."
-  REPORTER
-  XML
-  OUTPUT_DIR
-  .
-  OUTPUT_PREFIX
-  "unittests."
-  OUTPUT_SUFFIX
-  .xml)
+#catch_discover_tests( tests TEST_PREFIX "unittests." REPORTER XML OUTPUT_DIR . OUTPUT_PREFIX "unittests." OUTPUT_SUFFIX .xml)
 
 # Add a file containing a set of constexpr tests
-add_executable(constexpr_tests constexpr_tests.cpp)
-target_link_libraries(
-  constexpr_tests
-  PRIVATE MPVGE::MPVGE_warnings
-          MPVGE::MPVGE_options
-          MPVGE::mpvge_lib
-          Catch2::Catch2WithMain)
+#add_executable(constexpr_tests constexpr_tests.cpp)
+#target_link_libraries(
+#  constexpr_tests
+#  PRIVATE MPVGE::MPVGE_warnings
+#          MPVGE::MPVGE_options
+#          MPVGE::mpvge_lib
+#          Catch2::Catch2WithMain)
 
-catch_discover_tests(
+#[[catch_discover_tests(
   constexpr_tests
   TEST_PREFIX
   "constexpr."
@@ -87,19 +76,19 @@ catch_discover_tests(
   "constexpr."
   OUTPUT_SUFFIX
   .xml)
-
+]]
 # Disable the constexpr portion of the test, and build again this allows us to have an executable that we can debug when
 # things go wrong with the constexpr testing
-add_executable(relaxed_constexpr_tests constexpr_tests.cpp)
+#[[add_executable(relaxed_constexpr_tests constexpr_tests.cpp)
 target_link_libraries(
   relaxed_constexpr_tests
   PRIVATE MPVGE::MPVGE_warnings
           MPVGE::MPVGE_options
           MPVGE::mpvge_lib
           Catch2::Catch2WithMain)
-target_compile_definitions(relaxed_constexpr_tests PRIVATE -DCATCH_CONFIG_RUNTIME_STATIC_REQUIRE)
+target_compile_definitions(relaxed_constexpr_tests PRIVATE -DCATCH_CONFIG_RUNTIME_STATIC_REQUIRE)]]
 
-catch_discover_tests(
+#[[catch_discover_tests(
   relaxed_constexpr_tests
   TEST_PREFIX
   "relaxed_constexpr."
@@ -111,3 +100,4 @@ catch_discover_tests(
   "relaxed_constexpr."
   OUTPUT_SUFFIX
   .xml)
+]]
