feat: moved SwapChain class implementation to the src
- Introduced a new file `SwapChain.cpp` that implements the `SwapChain` class.
- The `SwapChain` class manages the swap chain for rendering, including methods for creating the swap chain, image views, render pass, framebuffers, and depth resources.
- Added functionality for acquiring the next image and submitting command buffers for rendering.
- The new implementation enhances Vulkan rendering capabilities and improves resource management within the application.
- Updated `CMakeLists.txt` to include `SwapChain.cpp` in the build process, ensuring proper compilation of the new class.

--- a/src/mpvge_lib/CMakeLists.txt
+++ b/src/mpvge_lib/CMakeLists.txt
@@ -20,7 +20,7 @@ add_library(mpvge_lib mpvge_lib.cpp
         ../../include/MPVGE/SwapChainSupportDetails.hpp
         RenderPipeline.cpp
         ../../include/MPVGE/RenderPipeline.hpp
-        ../../include/MPVGE/SwapChain.cpp
+        SwapChain.cpp
         ../../include/MPVGE/SwapChain.hpp
 )
 
