--- a/src/mpvge_lib/CMakeLists.txt
+++ b/src/mpvge_lib/CMakeLists.txt
@@ -2,6 +2,11 @@ include(GenerateExportHeader)
 
 find_package(Vulkan REQUIRED)
 add_library(mpvge_lib mpvge_lib.cpp
+        ../../include/MPVGE/mpvge_lib.hpp
+        ../../include/MPVGE/DeviceInfo.hpp
+        ../../include/MPVGE/vulkanToString.hpp
+        ../../include/MPVGE/vulkanCheck.hpp
+        ../../include/MPVGE/VulkanLogInfoCallback.hpp
         Application.cpp
         ../../include/MPVGE/Application.hpp
         Window.cpp
@@ -22,6 +27,7 @@ add_library(mpvge_lib mpvge_lib.cpp
         ../../include/MPVGE/RenderPipeline.hpp
         SwapChain.cpp
         ../../include/MPVGE/SwapChain.hpp
+        ../../include/MPVGE/VulkanObjectType.hpp
 )
 
 get_target_property(target_name mpvge_lib NAME)
