feat: add FPSCounter class for frame rate tracking
- Introduced a new class `FPSCounter` in `FPSCounter.hpp` and `FPSCounter.cpp` to manage and display frames per second (FPS) and frame timing.
- The `FPSCounter` class includes methods for initializing the counter, updating FPS, and displaying frame information in the window title.
- Integrated `FPSCounter` into the `Application` class in `Application.cpp` to track and display FPS during the application run loop.
- Updated `CMakeLists.txt` to include the new `FPSCounter` source and header files for compilation.

--- a/src/mpvge_lib/CMakeLists.txt
+++ b/src/mpvge_lib/CMakeLists.txt
@@ -7,6 +7,8 @@ add_library(mpvge_lib mpvge_lib.cpp
         ../../include/MPVGE/vulkanToString.hpp
         ../../include/MPVGE/vulkanCheck.hpp
         ../../include/MPVGE/VulkanLogInfoCallback.hpp
+        FPSCounter.cpp
+        ../../include/MPVGE/FPSCounter.hpp
         Application.cpp
         ../../include/MPVGE/Application.hpp
         Window.cpp
