feat: add Model class and update CMake configuration
- Added Model class in Model.hpp and Model.cpp to define the structure for model representation in the project.
- Corrected the executable target name from 'mvpge' to 'mpvge' in CMakeLists.txt files across multiple directories to maintain consistency.
- Included Model.cpp and Model.hpp in the mpvge_lib target to ensure proper compilation and linking of the new Model class.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,7 +120,7 @@ include(cmake/PackageProject.cmake)
 # we know we want to ship
 MPVGE_package_project(
   TARGETS
-  mvpge
+  mpvge
   MPVGE_options
   MPVGE_warnings
   # FIXME: this does not work! CK
