--- a/src/mpvge/CMakeLists.txt
+++ b/src/mpvge/CMakeLists.txt
@@ -1,14 +1,14 @@
-add_executable(mvpge main.cpp)
+add_executable(mpvge main.cpp)
 
 target_link_libraries(
-  mvpge
+  mpvge
   PRIVATE MPVGE::MPVGE_options
           MPVGE::MPVGE_warnings)
 
 target_link_system_libraries(
-  mvpge
+  mpvge
   PRIVATE
           CLI11::CLI11
           MPVGE::mpvge_lib)
 
-target_include_directories(mvpge PRIVATE "${CMAKE_BINARY_DIR}/configured_files/include")
+target_include_directories(mpvge PRIVATE "${CMAKE_BINARY_DIR}/configured_files/include")
