feat: add Model class implementation for 3D model handling
- Created Model.cpp to implement the Model class, which includes methods for creating vertex buffers, drawing, and binding vertex buffers.
- Added constructor and destructor for resource management.
- Implemented vertex input binding and attribute description methods for Vulkan integration.
- Updated CMakeLists.txt to include Model.cpp in the build process.

--- a/src/mpvge_lib/CMakeLists.txt
+++ b/src/mpvge_lib/CMakeLists.txt
@@ -30,7 +30,7 @@ add_library(mpvge_lib mpvge_lib.cpp
         ../../include/MPVGE/RenderPipeline.hpp
         SwapChain.cpp
         ../../include/MPVGE/SwapChain.hpp
-        ../../include/MPVGE/Model.cpp
+        Model.cpp
         ../../include/MPVGE/Model.hpp
 )
 
